ethereum/ingress/ingress.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ethereum-privatenet-ingress-v4
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "true"
spec:
  tls:
  - secretName: self-signed-gclb-cert
  defaultBackend:
    service:
      name: eth-geth-tx-lb
      port:
        name: http
  rules:
    - http:
        paths:
          - path: /explorer
            pathType: Prefix
            backend:
              service:
                name: blockscout-proxy-lb
                port:
                  name: http
